add tutorial link and animation

--- a/Button_Ripple_Hover/main.html
+++ b/Button_Ripple_Hover/main.html
@@ -7,10 +7,13 @@
     <link rel="stylesheet" href="main.css">
     <link rel="stylesheet" href="https://fonts.googleapis.com">
     <script src="main.js" defer></script>
-    <title>Document</title>
+    <title>Button Ripple Hover</title>
 </head>
 <body>
     <button>Hover Me</button>
     <button>Hover Me</button>
+    <a href="https://www.youtube.com/watch?v=4ix5UMqeS9Q" title="Tutorial" class="link">
+        How to make "Button Ripple Hover"
+    </a>
 </body>
 </html>
