--- a/Magic Menu Indicator/main.html
+++ b/Magic Menu Indicator/main.html
@@ -53,6 +53,9 @@
         <div class="indicator"></div>
       </ul>
     </div>
+    <a href="https://www.youtube.com/watch?v=ArTVfdHOB-M" title="Tutorial" class="link">
+        How to make Magic Menu Indicator
+    </a>
 
     <script>
         const list = document.querySelectorAll('.list');
