add background and change header and footer

--- a/Portfolio/index.html
+++ b/Portfolio/index.html
@@ -14,15 +14,33 @@
       </div>
       <div class="container">
         <button class="btn btn1">Home</button>
+        <b>|</b>
         <button class="btn btn2">Skills</button>
+        <b>|</b>
         <button class="btn btn3">About</button>
+        <b>|</b>
         <button class="btn btn4">Contact</button>
-        <button class="btn btn5">Help</button>
+        <b>|</b>
+        <button class="btn btn5">Dark mode</button>
       </div>
     </div>
 
     <div class="main">
-        <h1>Hey</h1>
+      <div class="container">
+        <div class="main-content">hello!</div>
+        <div class="main-content">Hej!</div>
+        <div class="main-content">1</div>
+        <div class="main-content">1</div>
+        <div class="main-content">1</div>
+        <div class="main-content">1</div>
+        <div class="main-content">1</div>
+        <div class="main-content">1</div>
+        <div class="main-content">1</div>
+        <div class="main-content">1</div>
+        <div class="main-content">1</div>
+        <div class="main-content">1</div>
+        <div class="main-content">1</div>
+      </div>
     </div>
 
     <div class="footer">
