--- a/Portfolio/index.html
+++ b/Portfolio/index.html
@@ -13,26 +13,39 @@
         <p>Portfolio</p>
       </div>
       <div class="container">
-        <button class="btn btn1">Home</button>
+        <div>
+          <a class="btn btn1">Home</a>
+        </div>
         <b>|</b>
-        <button class="btn btn2">Skills</button>
+        <div>
+          <a class="btn btn2">Skills</a>
+        </div>
         <b>|</b>
-        <button class="btn btn3">About</button>
+        <div>
+          <a class="btn btn3">About</a>
+        </div>
         <b>|</b>
-        <button class="btn btn4">Contact</button>
-        <b>|</b>
-        <button class="btn btn5">Dark mode</button>
+        <div>
+          <a class="btn btn4">Contact</a>
+        </div>
       </div>
     </div>
 
+    <div class="page-title">
+      <p>Home</p>
+    </div>
+
     <div class="main">
-      <div class="main-content">hello!</div>
-      <div class="main-content">Hej!</div>
-      <div class="main-content">1</div>
+      <button class="main-content">hello!</button>
+      <button class="main-content">Hej!</button>
+      <button class="main-content">hi!</button>
+      <button class="main-content">Sawaddee!</button>
+      <button class="main-content">hey!</button>
+      <button class="main-content">Bye!</button>
     </div>
 
     <div class="footer">
-        <p>Create by Me : Pavin Butprom</p>
+      <p>Create by Me : Pavin Butprom</p>
     </div>
   </body>
 </html>
