--- a/Prettier_animation/index.html
+++ b/Prettier_animation/index.html
@@ -9,8 +9,8 @@
     <title>Prettier_animation</title>
 </head>
 <body>
-    <div>
-        https://www.youtube.com/watch?v=uQNpr09UOAY
+    <div class="title">
+        <a href="https://www.youtube.com/watch?v=uQNpr09UOAY">Prettier</a> 
     </div>
     <div class="container">
         <div class="row">
