move all to learning and add portfolio to firebase

--- a/public/contact.html
+++ b/public/contact.html
@@ -14,25 +14,25 @@
       </div>
       <div class="container">
         <div>
-          <a class="btn btn1">Home</a>
+          <a class="btn btn1" href="index.html">Home</a>
         </div>
         <b>|</b>
         <div>
-          <a class="btn btn2">Skills</a>
+          <a class="btn btn2" href="skill.html">Skills</a>
         </div>
         <b>|</b>
         <div>
-          <a class="btn btn3">About</a>
+          <a class="btn btn3" href="about.html">About</a>
         </div>
         <b>|</b>
         <div>
-          <a class="btn btn4">Contact</a>
+          <a class="btn btn4" href="contact.html">Contact</a>
         </div>
       </div>
     </div>
 
     <div class="page-title">
-      <p>Home</p>
+      <p>Contact</p>
     </div>
 
     <div class="main">
