adjust staggered grid

--- a/Learning/Staggered Grid Effect/index.html
+++ b/Learning/Staggered Grid Effect/index.html
@@ -1,18 +1,44 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="style.css">
+  <head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="stylesheet" href="style.css" />
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Dancing+Script:wght@500&family=Rubik:wght@400;700&display=swap"
+      rel="stylesheet"
+    />
+    <script
+      src="https://kit.fontawesome.com/9915514e38.js"
+      crossorigin="anonymous"
+    ></script>
     <title>Document</title>
-</head>
-<body>
+  </head>
+  <body>
     <div id="tiles"></div>
 
-    <div>https://www.youtube.com/watch?v=bAwEj_mSzOs</div>
+    <h1 id="title" class="centered">
+      The name of the game is
+      <span class="fancy">Chess</span>
+      .
+    </h1>
+
+    <i id="icon" class="fa-solid fa-chess centered"></i>
+
+    <a
+      id="yt-link"
+      class="meta-link"
+      href="https://youtu.be/bAwEj_mSzOs"
+      target="_blank"
+    >
+      <i class="fa-brands fa-youtube"></i>
+      <span>5 min tutorial</span>
+    </a>
 
     <script src="anime.min.js"></script>
     <script src="script.js"></script>
-</body>
+  </body>
 </html>
